# metaheuristics

./: .gitignore  README.md
activity1/article/: article.typ  main.typ  works.yml
activity1/assets/: lagostim.xcf
activity1/slides/: citations.yml  main.typ  slides.typ
activity2/: .gitignore  README.md  pyproject.toml
activity2/article/: article.typ  works.yml
activity2/gls_uctp/local_search/: local_search.py  test_local_search.py
activity2/gls_uctp/uctp/: model.py  test_model.py
activity2/instances/test/: comp13.ctt
activity2/presentation/: presentation.typ  pyproject.toml
activity2/presentation/src/: .gitignore  presentation.qmd
activity2/src/: __init__.py
activity2/src/local_search/: local_search.py  test_local_search.py
activity2/src/uctp/: instance_parser.py  model.py  test_model.py
activity2/src/utils/: dropping_stack.py  test_dropping_stack.py
activity2/tests/: test_uctp.py
notes/: combinatory optimization.md  computability.md  computational complexity.md  continuous optimization problem.md  continuous variables.md  discrete optimization problem.md  discrete variables.md  guided local search.md  local search.md  time complexity.md  timetable problem.md
