[tool.poetry]
name = "GLSUCTP"
version = "0.1.0"
description = "Using Guided Local Search to solve the University Course Timetabling Problem"
authors = ["Henriquelay <37563861+Henriquelay@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
networkx = "^3.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
