[tool.poetry]
name = "presentation"
version = "0.1.0"
description = ""
authors = ["Henriquelay <37563861+Henriquelay@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.12"
jupyter = "^1.0.0"
gls_uctp = { path = "..", develop = true }
plotly = "^5.18.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
